QPA/Windows: misc cleanup of QShGetFileInfoThread

Misc cleanup of QShGetFileInfoThread:
 - use QThread's interruption abilities instead custom one
 - use QMutexLocker instead manual lock/unlock

Task-number: QTBUG-90876
Change-Id: If0566e56ab765fb95e837cdfa09639c1622b6d4e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>